--- a/miniRE.vcxproj
+++ b/miniRE.vcxproj
@@ -28,10 +28,17 @@
     <ResourceCompile Include="miniRE.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="icon.ico" />
     <Image Include="icon1.ico" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="快捷修改ID.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="7z\7za.dll" />
+    <None Include="7z\7za.exe" />
+    <None Include="7z\7zxa.dll" />
+    <None Include="reshade\MiNi-reshade.7z" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -111,7 +118,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
