--- a/miniRE.vcxproj.filters
+++ b/miniRE.vcxproj.filters
@@ -1,40 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="头文件">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="资源文件">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{85344f05-1240-483f-8e7b-e61b2c8738ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="resources">
+      <UniqueIdentifier>{ccc87904-0623-4204-81a4-81300c13cb27}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="resources\7z">
+      <UniqueIdentifier>{377fc400-c490-4117-b33e-c9403cf4aead}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="resources\reshade">
+      <UniqueIdentifier>{cdee4cf4-6b7f-46f4-91e9-5220ccc906f0}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="快捷修改ID.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
-      <Filter>头文件</Filter>
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="miniRE.rc">
-      <Filter>资源文件</Filter>
+      <Filter>src</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="icon1.ico">
-      <Filter>资源文件</Filter>
+      <Filter>resources</Filter>
+    </Image>
+    <Image Include="icon.ico">
+      <Filter>src</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="快捷修改ID.txt" />
+    <None Include="7z\7za.dll">
+      <Filter>resources\7z</Filter>
+    </None>
+    <None Include="7z\7za.exe">
+      <Filter>resources\7z</Filter>
+    </None>
+    <None Include="7z\7zxa.dll">
+      <Filter>resources\7z</Filter>
+    </None>
+    <None Include="reshade\MiNi-reshade.7z">
+      <Filter>resources\reshade</Filter>
+    </None>
   </ItemGroup>
 </Project>
